# primitive-3d

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  primitive-3d  run.sh
src/: main.cpp  mesh.cpp  mesh.hpp  types.h
src/Primitive/: Primitive.cpp  Primitive.hpp
src/Stage/: Stage.cpp  Stage.hpp
src/Triangle/: Triangle.cpp  Triangle.hpp
src/assets/: lotus_bitmap.hpp
